--- a/static/style.css
+++ b/static/style.css
@@ -2,7 +2,7 @@ html, body {
     min-height: 100%;
 }
 
-    body, div, form, input, select, textarea, p { 
+body, div, form, input, select, textarea, p { 
     padding: 0;
     margin: 0;
     outline: none;
@@ -10,82 +10,102 @@ html, body {
     font-size: 14px;
     color: #666;
     line-height: 22px;
-    }
-    h1 {
+}
+
+h1 {
     margin: 15px 0;
     font-weight: 400;
-    }
-    .testbox {
+}
+
+.testbox {
     display: flex;
     justify-content: center;
     align-items: center;
     height: inherit;
     padding: 3px;
-    }
-    .container {
-        width: 50%;
-    }
-    input, select, textarea {
+}
+
+.container {
+    width: 50%;
+}
+
+input, select, textarea {
     margin-bottom: 10px;
     border: 1px solid #ccc;
     border-radius: 3px;
-    }
-    input:hover, select:hover, textarea:hover {
+}
+
+input:hover, select:hover, textarea:hover {
     outline: none;
     box-shadow: 0 0 5px 0 #095484;
-    }
-    input {
+}
+
+input {
     width: calc(100% - 10px);
     padding: 5px;
-    }
-    select {
+}
+
+select {
     width: 100%;
     padding: 7px 0;
     background: transparent;
-    }
-    textarea {
+}
+
+textarea {
     width: calc(100% - 2px);
     padding: 5px;
-    }
-    .item {
+}
+
+.item {
     position: relative;
     margin: 10px 0;
-    }
-    .item:hover p, .item:hover i {
+}
+
+.item:hover p, .item:hover i {
     color: #095484;
-    }
-    input:hover, select:hover, textarea:hover {
+}
+
+input:hover, select:hover, textarea:hover {
     box-shadow: 0 0 5px 0 #095484;
-    }
-    .status:hover input {
+}
+
+.status:hover input {
     box-shadow: none;
-    }
-    .status label:hover input {
+}
+
+.status label:hover input {
     box-shadow: 0 0 5px 0 #095484;
-    }
-    .status-item input, .status-item span {
+}
+
+.status-item input, .status-item span {
     width: auto;
     vertical-align: middle;
-    }
-    .status-item input {
+}
+
+.status-item input {
     margin: 0;
-    }
-    .status-item span {
+}
+
+.status-item span {
     margin: 0 20px 0 5px;
-    }
-    input[type="time"]::-webkit-inner-spin-button {
+}
+
+input[type="time"]::-webkit-inner-spin-button {
     margin: 2px 22px 0 0;
-    }
-    .item i {
+}
+
+.item i {
     right: 1%;
     top: 30px;
     z-index: 1;
-    }
-    .btn-block {
+}
+
+.btn-block {
     margin-top: 20px;
     text-align: center;
-    }
-    button {
+}
+
+button {
     width: auto;
     padding: 10px;
     border: none;
@@ -96,23 +116,25 @@ html, body {
     font-size: 16px;
     color: #fff;
     cursor: pointer;
+}
+
+button:hover {
+    background-color: #0666a3;
+}
+
+@media (min-width: 568px) {
+    .name-item {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
     }
-
-    button:hover {
-        background-color: #0666a3;
+    .name-item input {
+        width: calc(50% - 20px);
     }
+}
 
-    @media (min-width: 568px) {
-        .name-item {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-        }
-        .name-item input {
-            width: calc(50% - 20px);
-        }
-    }
-
-
-
-
+.grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr; /* Deux colonnes de largeur égale */
+    grid-gap: 10px; /* Espace entre les éléments de la grille */
+}
